--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
   <header>
-    <h1>Apple Pies</h1>
+    <h1>Apple Pie</h1>
   </header>
   <div class="container">
     <section id="recipe_servings">
       <p>This was my grandmother's apple pie recipe. I have never seen another one
   quite like it. It will always be my favorite and has won me several first place
   prizes in local competitions. I hope it becomes one of your favorites as well!</p>
-      <img src="./images/cooking-info.png"/>
+      <img src="./images/recipe-info.png"/>
     </section>
-    <section class="recipe_ingredients">
+    <section id="recipe_ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>1 recipe pastry for a 9 inch double crust pie</li>
@@ -29,7 +29,7 @@
         <li>1/2 cup packed brown sugar</li>
         <li>8 Granny Smith apples - peeled, cored and sliced</li>
       </ul>
-      <img src="./images/recipe-info.png"/>
+      <img src="./images/cooking-info.png"/>
     </section>
     <section id="preparation">
       <h2>Directions</h2>
